--- a/src/app/productRegistration/productRegistration.component.html
+++ b/src/app/productRegistration/productRegistration.component.html
@@ -7,7 +7,7 @@
     </div>
     <br>
     <div class="row">
-        <form #myForm="ngForm" (submit)="OnFormSubmit(myForm)" novalidate>
+        <form #myForm="ngForm" (submit)="onFormSubmit(myForm)" novalidate>
         <table cellspan='0'>
             <thead>
                 <tr><td>Application Name</td>
