--- a/src/app/productRegistration/productRegistration.component.html
+++ b/src/app/productRegistration/productRegistration.component.html
@@ -89,6 +89,12 @@
                     <td class="TDFormBody">{{Comment}}</td> <!-- this is test-area-->
                 </tr>
                 
+                <tr><td class="TDFormHead">&nbsp;</td>
+                    <td class="TDFormBody"><button type="submit">Submit</button>&nbsp;&nbsp;
+                        <button type="submit" (click)="resetForm(myForm)">Reset</button>
+                    </td> <!-- this is test-area-->
+                </tr>
+                
             </tbody>
 
         </table>
